# nexus-agentic-commerce

./: .gitignore  Cargo.toml  README.md
dashboard/: index.html  package-lock.json  package.json
dashboard/src/: App.svelte  app.css
dashboard/src/components/: AgentPanel.svelte  Controls.svelte  MeshView.svelte  MetricsPanel.svelte  SettlementBar.svelte  TransactionFeed.svelte
dashboard/src/lib/: stores.js  ws.js
nexus-demo/: Cargo.toml
nexus-demo/foxmq/: agents.py  auction.py  main.py  requirements.txt  ws_server.py
nexus-demo/src/: auction.rs  main.rs  ws_server.rs
nexus-demo/vertex/: Cargo.toml
nexus-demo/vertex/src/: agents.rs  auction.rs  main.rs
nexus-sdk/: Cargo.toml
nexus-sdk/foxmq/: pyproject.toml
nexus-sdk/foxmq/src/nexus_sdk/: engine.py
nexus-sdk/src/: clearing.rs  engine.rs  identity.rs  lib.rs  types.rs
nexus-sdk/vertex/: Cargo.toml
nexus-sdk/vertex/src/: engine.rs  handshake.rs
