[package]
name = "nexus-sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tashi-vertex = "0.12.0"
tokio = { version = "1", features = ["sync", "time", "macros"] }
